typecheck/tests/micro/bad/no_return.c
int peach(int x, int y)
{
return;
}
